basic require setup

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <html>
 <head>
+  <title>drape</title>
+  <style>
+    body {
+      font-family: helvetica, arial;
+    }
+  </style>
 </head>
-<script src="javascript.js">
+<script data-main="main" src="require.js">
 /* TODO
 
 * 3d canvas, basic webgl setup
