--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <style>
     body {
       font-family: helvetica, arial;
-      background-color: black;
+      background-color: dimgray;
+      margin:0px;
     }
     .fullscreen {
       position:absolute;
@@ -20,11 +21,11 @@
 <script data-main="main" src="require.js">
 /* TODO
 
-* 3d canvas, basic webgl setup
+x 3d canvas, basic webgl setup
 
-* basic domain model
+* mesh triangulation of a heightmap function
 
-* export domain model to 3d mesh for viewing
+* arcball viewing
 
 * domain functions for modelling and composing
 
