simple heightmap triangulation

--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
 /* TODO
 
 x 3d canvas, basic webgl setup
-
-* mesh triangulation of a heightmap function
-
+x simple mesh triangulation of a heightmap function
 * arcball viewing
-
 * domain functions for modelling and composing
 
 */
