basic view matrix

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 x 3d canvas, basic webgl setup
 x simple mesh triangulation of a heightmap function
 * arcball viewing
+ * view matrix
+ * drag/touch to change angles
+ * pinch to move in/out
 * domain functions for modelling and composing
 
 */
