better arcball control

--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 
 x 3d canvas, basic webgl setup
 x simple mesh triangulation of a heightmap function
-* arcball viewing
- * view matrix
- * drag/touch to change angles
- * pinch to move in/out
+x arcball viewing
+ x view matrix
+ x drag/touch to change angles
+  x accumulate angles
+* lighting and colours
 * domain functions for modelling and composing
+* pinch to move camera in/out
 
 */
 </script>
