move height map into own module

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ x arcball viewing
  x view matrix
  x drag/touch to change angles
   x accumulate angles
-* lighting and colours
+x lighting and colours
 * domain functions for modelling and composing
 * pinch to move camera in/out
 
