--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@ x arcball viewing
  x drag/touch to change angles
   x accumulate angles
 x lighting and colours
-* domain functions for modelling and composing
+* enable culling so mesh can be viewed correctly from all angles
+* domain model is NOT just a heightmap
+ * want to triangulate using domain knowledge (just as much as we want to CAM using domain knowledge)
 * pinch to move camera in/out
 
 */
