--- a/index.html
+++ b/index.html
@@ -28,8 +28,32 @@ x arcball viewing
  x drag/touch to change angles
   x accumulate angles
 x lighting and colours
-* domain model is NOT just a heightmap
- * want to triangulate using domain knowledge (just as much as we want to CAM using domain knowledge)
+o New plan
+ o Height map becomes surface map with basis vectors and curvature.
+ o Then take a sample grid and perturb it based on curvature and feature detection (and tool size/shape?)
+ o Then generate vector field and join up into tool path.
+ o Then triangulate toolpath to give renderable mesh.
+* Return surface info at each 2D point, not just height
+ * Rename height module
+ * Return basis and curvature for cube
+  * Consider testing
+ * Use surface info normal for mesh, dont regenerate
+ * Transform basis/curvature for modifiers (rotate, translate etc)
+ * Return basis/curvature for sweep
+* Modify sweep to scale the profile along the path
+ * Define the way the profile changes
+ * Need to modify basis and curvature too
+* Define an (initially uniform) sample grid
+* Simple toolpath generation: simple criss/cross for now
+* Triangulate from toolpath
+* Generate tool path from surface info considered as a vector field
+ * Property tests
+* Modify mesh before toolpath generation: Coalesce samples that have low curvature
+ * Property tests
+* Add samples where curvature is high
+ * Property tests
+* Find discontinuities and increase sampling(?)
+ * Property tests
 * pinch to move camera in/out
 
 */
