consider surface info not just height map

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ o New plan
  o Then generate vector field and join up into tool path.
  o Then triangulate toolpath to give renderable mesh.
 * Return surface info at each 2D point, not just height
- * Rename height module
+ x Rename height module
  * Return basis and curvature for cube
   * Consider testing
  * Use surface info normal for mesh, dont regenerate
