--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@ o New plan
 * Return surface info at each 2D point, not just height
  x Rename height module
  * Return basis and curvature for cube
-  * Consider testing
+  * tests
+ * Return basis and curvature for sphere
+  * tests
+ * tests for csg union
  * Use surface info normal for mesh, dont regenerate
  * Transform basis/curvature for modifiers (rotate, translate etc)
  * Return basis/curvature for sweep
