some basic cube properties

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ o New plan
  x Rename height module
  * Return basis and curvature for cube
   * tests
+ ! Rename: tangent->cutDir, cotangent to perpDir
+ * Primitive evaluation performance common test
  * Return basis and curvature for sphere
   * tests
  * tests for csg union
