--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ o New plan
  o Then triangulate toolpath to give renderable mesh.
 * Return surface info at each 2D point, not just height
  x Rename height module
- ! Rename: tangent->cutDir, cotangent to perpDir
+ x Rename: tangent->cutDir, cotangent to perpDir
  * Return basis and curvature for cube
   * tests
  * Primitive evaluation performance common test
