cube cut direction is always clockwise

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ o New plan
  x Rename: tangent->cutDir, cotangent to perpDir
  * Return basis and curvature for cube
   * tests
+ * Visualise cut direction vector field
  * Primitive evaluation performance common test
  * Return basis and curvature for sphere
   * tests
