--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ o New plan
 * Return surface info at each 2D point, not just height
  x Rename height module
  x Rename: tangent->cutDir, cotangent to perpDir
- * Return basis and curvature for cube
-  * tests
+ x Return basis and curvature for cube
+  x tests
  * Visualise cut direction vector field
  * Primitive evaluation performance common test
  * Return basis and curvature for sphere
