Rescale to a size more appropriate to my cnc :-)

--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@ x tests
  * Add arrow heads
 * Refactor out duplication in draw* modules
 * Refactor: generate grid of surface points and then triangulate/cutlines that
-* Primitive evaluation performance common test
+ * Define an (initially uniform) sample grid
 * Return basis and curvature for sphere
-* tests
-* tests for csg union
-* Use surface info normal for mesh, dont regenerate
+ * tests
+* Tests for csg union
 * Transform basis/curvature for modifiers (rotate, translate etc)
+ * tests
 * Return basis/curvature for sweep
+ * tests
 * Modify sweep to scale the profile along the path
  * Define the way the profile changes
  * Need to modify basis and curvature too
-* Define an (initially uniform) sample grid
 * Simple toolpath generation: simple criss/cross for now
-* Triangulate from toolpath
+* Triangulate from toolpath; generate cutlines visualisation from toolpath
 * Generate tool path from surface info considered as a vector field
  * Property tests
 * Modify mesh before toolpath generation: Coalesce samples that have low curvature
