Add arrow heads to cut dir visualisation

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ x tests
  * Add arrow heads
 * Refactor out duplication in draw* modules
 * Refactor: generate grid of surface points and then triangulate/cutlines that
- * Define an (initially uniform) sample grid
+* Define an (initially uniform) sample grid
+* pinch to move camera in/out
+* Two finger drag to pan
 * Return basis and curvature for sphere
  * tests
 * Tests for csg union
@@ -63,7 +65,6 @@ x tests
  * Property tests
 * Find discontinuities and increase sampling(?)
  * Property tests
-* pinch to move camera in/out
 
 */
 </script>
