Pull out gl setup helpers into module

--- a/index.html
+++ b/index.html
@@ -38,9 +38,12 @@ x Rename height module
 x Rename: tangent->cutDir, cotangent to perpDir
 x Return basis and curvature for cube
 x tests
-* Visualise cut direction vector field
- * Add arrow heads
+x Visualise cut direction vector field
+ x Add arrow heads
 * Refactor out duplication in draw* modules
+ x Shader loading etc
+ x Buffer setup
+ * Camera module
 * Refactor: generate grid of surface points and then triangulate/cutlines that
 * Define an (initially uniform) sample grid
 * pinch to move camera in/out
