refactor touch module

--- a/index.html
+++ b/index.html
@@ -40,11 +40,10 @@ x Return basis and curvature for cube
 x tests
 x Visualise cut direction vector field
  x Add arrow heads
-* Refactor out duplication in draw* modules
+x Refactor out duplication in draw* modules
  x Shader loading etc
  x Buffer setup
- * Camera module
-  * Take cw/ch (and gl..???) out of the args to the drawing functions (and obviously pitch/yaw too :-)
+ x Camera module
 * Pinch to move camera in/out
 * Two finger drag to pan
 * Refactor: generate grid of surface points and then triangulate/cutlines that
