Rename to camera.pan
and get ready for exporting properly named touch events like pan/pinch etc

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ x Refactor out duplication in draw* modules
  x Buffer setup
  x Camera module
 * Pinch to move camera in/out
+ * touch module should export drag / pinch etc events directly (ie touch.drag not touch.start/move etc)
 * Two finger drag to pan
 * Refactor: generate grid of surface points and then triangulate/cutlines that
  * Define an (initially uniform) sample grid
