--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ x Refactor out duplication in draw* modules
  x Buffer setup
  x Camera module
 * Pinch to move camera in/out
- * touch module should export pan / pinch etc events directly (ie touch.pan not touch.start/move etc)
+ x touch module should export pan / pinch etc events directly (ie touch.pan not touch.start/move etc)
+ * Proper multitouch handling
 * Two finger drag to pan
 * Refactor: generate grid of surface points and then triangulate/cutlines that
  * Define an (initially uniform) sample grid
