Extract mouse handling into its own module

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ x Refactor out duplication in draw* modules
  x Camera module
 * Pinch to move camera in/out
  x touch module should export pan / pinch etc events directly (ie touch.pan not touch.start/move etc)
- * Proper multitouch handling
+ x Proper multitouch handling
+ * Pinch zoom
+ * Mouse wheel zoom
 * Two finger drag to pan
 * Refactor: generate grid of surface points and then triangulate/cutlines that
  * Define an (initially uniform) sample grid
