--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@ x Refactor out duplication in draw* modules
  x Shader loading etc
  x Buffer setup
  x Camera module
-* Pinch to move camera in/out
+x Pinch to move camera in/out
  x touch module should export pan / pinch etc events directly (ie touch.pan not touch.start/move etc)
  x Proper multitouch handling
- * Pinch zoom
- * Mouse wheel zoom
+ x Pinch zoom
 * Two finger drag to pan
 * Refactor: generate grid of surface points and then triangulate/cutlines that
  * Define an (initially uniform) sample grid
