--- a/index.html
+++ b/index.html
@@ -48,9 +48,7 @@ x Pinch to move camera in/out
  x touch module should export pan / pinch etc events directly (ie touch.pan not touch.start/move etc)
  x Proper multitouch handling
  x Pinch zoom
-* Return basis and curvature for sphere
- * tests
-* Tests for csg union
+x Return basis and curvature for sphere
 * Transform basis/curvature for modifiers (rotate, translate etc)
  * tests
 * Return basis/curvature for sweep
