Line swept ellipse height and cutDir

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@ x Translate
 * Sweep
  o Takes a profile and a path
  o For each point, find the line-of-profile
- * Height from profile evaluation on line-of-profile
- * CutDir from path
+ x Height from profile evaluation on line-of-profile
+ x CutDir from path
  * Perp from profile gives the normal
  * CutCurvature from profile
  * PerpCurvature from path
