--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ x Translate
  o For each point, find the line-of-profile
  x Height from profile evaluation on line-of-profile
  x CutDir from path
- * Perp from profile gives the normal
+ x Perp from profile gives the normal
  * CutCurvature from profile
  * PerpCurvature from path
 * Sweep takes another arg giving the scale of the profile along the path
