--- a/index.html
+++ b/index.html
@@ -50,14 +50,16 @@ x Pinch to move camera in/out
  x Pinch zoom
 x Return basis and curvature for sphere
 x Translate
-* Sweep
+x Sweep
  o Takes a profile and a path
  o For each point, find the line-of-profile
  x Height from profile evaluation on line-of-profile
  x CutDir from path
  x Perp from profile gives the normal
- * CutCurvature from profile
- * PerpCurvature from path
+ x CutCurvature from profile
+ x PerpCurvature from path
+ x lerp needs to min/max. curvature hw/hh are wrong way round
+* Numerical tests for normal and curvatures
 * Sweep takes another arg giving the scale of the profile along the path
  * Will mean redoing all the cutDir/curvature etc and it'll be a lot trickier :-/
 * Refactor: generate grid of surface points and then triangulate/cutlines that
