numerical test for surface normal

--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@ x Sweep
  x PerpCurvature from path
  x lerp needs to min/max. curvature hw/hh are wrong way round
 * Numerical tests for normal and curvatures
+ x Normal test
+ * Fix ellipse normal
+ * Curvature test
+ * Fix ellipse curvature
 * Sweep takes another arg giving the scale of the profile along the path
  * Will mean redoing all the cutDir/curvature etc and it'll be a lot trickier :-/
 * Refactor: generate grid of surface points and then triangulate/cutlines that
