--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@ x Sweep
  x lerp needs to min/max. curvature hw/hh are wrong way round
 * Numerical tests for normal and curvatures
  x Normal test
- * Fix ellipse normal
- * Curvature test
- * Fix ellipse curvature
+ x Fix ellipse normal
+ x Curvature test
+ x Fix ellipse curvature
+ * Fix sphere cut curvature!
 * Sweep takes another arg giving the scale of the profile along the path
  * Will mean redoing all the cutDir/curvature etc and it'll be a lot trickier :-/
 * Refactor: generate grid of surface points and then triangulate/cutlines that
