Fix sphere curvature

--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@ x Sweep
  x CutCurvature from profile
  x PerpCurvature from path
  x lerp needs to min/max. curvature hw/hh are wrong way round
-* Numerical tests for normal and curvatures
+x Numerical tests for normal and curvatures
  x Normal test
  x Fix ellipse normal
  x Curvature test
  x Fix ellipse curvature
- * Fix sphere cut curvature!
+ x Fix sphere cut curvature!
 * Sweep takes another arg giving the scale of the profile along the path
  * Will mean redoing all the cutDir/curvature etc and it'll be a lot trickier :-/
 * Refactor: generate grid of surface points and then triangulate/cutlines that
