Scale along the swept profile

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ x Numerical tests for normal and curvatures
  x Fix sphere cut curvature!
 * Sweep takes another arg giving the scale of the profile along the path
  * Will mean redoing all the cutDir/curvature etc and it'll be a lot trickier :-/
+* Spline paths to use with sweep
 * Refactor: generate grid of surface points and then triangulate/cutlines that
 * Define an (initially uniform) sample grid
 * Modify sweep to scale the profile along the path
