Add scaling along swept profile

--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ x Numerical tests for normal and curvatures
  x Curvature test
  x Fix ellipse curvature
  x Fix sphere cut curvature!
-* Sweep takes another arg giving the scale of the profile along the path
- * Will mean redoing all the cutDir/curvature etc and it'll be a lot trickier :-/
+x Sweep takes another arg giving the scale of the profile along the path
+* Need a good mechanism to bring together the various path/profile/scale data into the final surface info
 * Spline paths to use with sweep
 * Refactor: generate grid of surface points and then triangulate/cutlines that
 * Define an (initially uniform) sample grid
