Break line out into own module
And also fix the test require shim so it works properly :-)

--- a/index.html
+++ b/index.html
@@ -67,7 +67,14 @@ x Numerical tests for normal and curvatures
  x Fix sphere cut curvature!
 x Sweep takes another arg giving the scale of the profile along the path
 * Break primitives.js out into appropriate modules
+ x Ellipse
+ * Line
+  !!! test require is broken!!!
+ * Scale
 * Tests at the seam underneath the sweep function: i.e. tests for paths, profiles and scale functions
+ * Ellipse
+ * Line
+ * Scale
 * Bring in bezier.js and set up a bezier path function
 * Refactor: generate grid of surface points and then triangulate/cutlines that
 * Define an (initially uniform) sample grid
