break scale out into own module

--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@ x Numerical tests for normal and curvatures
 x Sweep takes another arg giving the scale of the profile along the path
 * Break primitives.js out into appropriate modules
  x Ellipse
- * Line
-  !!! test require is broken!!!
+ x Line
  * Scale
 * Tests at the seam underneath the sweep function: i.e. tests for paths, profiles and scale functions
  * Ellipse
