--- a/index.html
+++ b/index.html
@@ -66,13 +66,10 @@ x Numerical tests for normal and curvatures
  x Fix ellipse curvature
  x Fix sphere cut curvature!
 x Sweep takes another arg giving the scale of the profile along the path
-* Break primitives.js out into appropriate modules
- x Ellipse
- x Line
- * Scale
+x Break primitives.js out into appropriate modules
 * Tests at the seam underneath the sweep function: i.e. tests for paths, profiles and scale functions
- * Ellipse
- * Line
+ * Path
+ * Profile
  * Scale
 * Bring in bezier.js and set up a bezier path function
 * Refactor: generate grid of surface points and then triangulate/cutlines that
