cutdir is a 2d vector

--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@ x Numerical tests for normal and curvatures
 x Sweep takes another arg giving the scale of the profile along the path
 x Break primitives.js out into appropriate modules
 x Path tests at the seam underneath the sweep function
-* Scaling along the path _should_ change the cutDir
-? Do we need more than pos and cutdir??
+x Scaling along the path _should_ change the cutDir
+x cutdir is 2D
+? Do we need more than pos and cutdir?? NO!
 * Scaling along the path _should_ change the normal and curvature!
 * Bring in bezier.js and set up a bezier path function
 * Refactor: generate grid of surface points and then triangulate/cutlines that
