--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ x Path tests at the seam underneath the sweep function
 x Scaling along the path _should_ change the cutDir
 x cutdir is 2D
 x Remove normal and curvatures; these should becalculated later
-* Bring in bezier.js and set up a bezier path function
+x Bring in bezier.js
+* Set up a bezier path function
 * Take numerical normal/curvature calcs out of tests into their own module
 * Refactor: generate grid of surface points and then triangulate/cutlines that
 * Define an (initially uniform) sample grid
