--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@ x Scaling along the path _should_ change the cutDir
 x cutdir is 2D
 x Remove normal and curvatures; these should becalculated later
 x Bring in bezier.js
-* Set up a bezier path function
+x Set up a bezier path function
+* ! cutdir is same all the way across the profile section; it should surely turn in less near the centreline?
+* ! power(0): curdir does not curve round end caps
 * Take numerical normal/curvature calcs out of tests into their own module
 * Refactor: generate grid of surface points and then triangulate/cutlines that
 * Define an (initially uniform) sample grid
