Fix bezier constructor :-/

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@ x Remove normal and curvatures; these should becalculated later
 x Bring in bezier.js
 x Set up a bezier path function
 x ! power(0): cutdir does not curve round end caps !! SHOULD NOT BE ANY END CAPS!
-* Unit tests for bezier
+x Unit tests for bezier
 * Take numerical normal/curvature calcs out of tests into their own module
 * Refactor: generate grid of surface points and then triangulate/cutlines that
+* Calculate normals for rendering
 * Define an (initially uniform) sample grid
 * Simple toolpath generation: simple criss/cross for now
 * Triangulate from toolpath; generate cutlines visualisation from toolpath
