generate cutlines from toolpath

--- a/index.html
+++ b/index.html
@@ -76,6 +76,11 @@ x Set up a bezier path function
 x ! power(0): cutdir does not curve round end caps !! SHOULD NOT BE ANY END CAPS!
 x Unit tests for bezier
 * Simple toolpath generation: simple criss/cross for now
+ x Toolpath module
+ * Return Array of toolpath points
+  * Stub array for now
+  * Update triangulation and line drawing
+ * Generate criss-cross toolpath
 * Triangulate from toolpath; generate cutlines visualisation from toolpath
 * Refactor: generate grid of surface points and then triangulate/cutlines that
 * Define an (initially uniform) sample grid
