surface specifies its size

--- a/index.html
+++ b/index.html
@@ -75,17 +75,15 @@ x Bring in bezier.js
 x Set up a bezier path function
 x ! power(0): cutdir does not curve round end caps !! SHOULD NOT BE ANY END CAPS!
 x Unit tests for bezier
-* Simple toolpath generation: simple criss/cross for now
+x Simple toolpath generation: simple criss/cross for now
  x Toolpath module
  x Return Array of toolpath points
   x Stub array for now
   x Cutlines from toolpath
- * Generate criss-cross toolpath for actual surface
-* Triangulate from toolpath; generate cutlines visualisation from toolpath
-* Refactor: generate grid of surface points and then triangulate/cutlines that
-* Define an (initially uniform) sample grid
-* Calculate normals for rendering
- * Take numerical normal/curvature calcs out of tests into their own module
+ x Generate criss-cross toolpath for actual surface
+* Triangulate mesh from toolpath
+ * Calculate normals for rendering
+  * Take numerical normal/curvature calcs out of tests into their own module
 * Generate tool path from surface info considered as a vector field
  * Property tests
 * ? cutdir is same all the way across the profile section; it should surely turn in less near the centreline? ?? Is this true?
