--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@ x Simple toolpath generation: simple criss/cross for now
   x Cutlines from toolpath
  x Generate criss-cross toolpath for actual surface
 * Resurrect old surface/cutdir rendering as a surface visualisation aid
-* Calculate normals for rendering
- * Take numerical normal/curvature calcs out of tests into their own module
+ * Calculate normals for rendering
+  * Take numerical normal/curvature calcs out of tests into triangulation
+ * cutDir visualisation
 * GCode generation from toolpath
  * Button to export
  * Save a file
