Ability to visualise cutDir arrows

--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@ x Simple toolpath generation: simple criss/cross for now
   x Stub array for now
   x Cutlines from toolpath
  x Generate criss-cross toolpath for actual surface
-* Resurrect old surface/cutdir rendering as a surface visualisation aid
- * Calculate normals for rendering
-  * Take numerical normal/curvature calcs out of tests into triangulation
- * cutDir visualisation
+x Resurrect old surface/cutdir rendering as a surface visualisation aid
+ x Calculate normals for rendering
+ x cutDir arrows visualisation
 * GCode generation from toolpath
  * Button to export
  * Save a file
