cutdir lines scale to surface extents

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ x Simple toolpath generation: simple criss/cross for now
 x Resurrect old surface/cutdir rendering as a surface visualisation aid
  x Calculate normals for rendering
  x cutDir arrows visualisation
-* draw/lines and draw/mesh should be instantiable and not have static data!
+x draw/lines and draw/mesh should be instantiable and not have static data!
 * GCode generation from toolpath
  * Button to export
  * Save a file
