--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@ x Resurrect old surface/cutdir rendering as a surface visualisation aid
  x cutDir arrows visualisation
 x draw/lines and draw/mesh should be instantiable and not have static data!
 * GCode generation from toolpath
- * Button to export
- * Save a file
+ x Button to export
+ x Save a file
  * Generate GCode from toolpath
 * Generate tool path that follows surface features
  * Property tests
