--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@ x draw/lines and draw/mesh should be instantiable and not have static data!
  x Button to export
  x Save a file
  * Generate GCode from toolpath
+  * Test driven!!
 * Generate tool path that follows surface features
  * Property tests
 * ? cutdir is same all the way across the profile section; it should surely turn in less near the centreline? ?? Is this true?
