--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ x GCode generation from toolpath
  x Generate GCode from toolpath
 * Generate tool path that follows surface features
  * Property tests
-  * All points on the surface are within a half-tool width of some part of the toolpath
+  x All points on the surface are within a half-tool width of some part of the toolpath
   * All points on the surface are cut to their correct height to within some tolerance
   * The toolpath points along the cutdirection at every point on the surface to within some tolerance
   * On all points the normal of the cut surface is close to the normal of the surface
