Replanning (tests failing at the mo)

--- a/index.html
+++ b/index.html
@@ -90,16 +90,25 @@ x GCode generation from toolpath
  x Button to export
  x Save a file
  x Generate GCode from toolpath
+* Toolpath analysis (then use these in the toolpath property tests)
+ * Toolpath searching (find nearest point on toolpath 2D/3D)
+ * Get cut surface under (2D) point given the toolpath and tool (to include scalloping as well)
+ * Get cut surface nearest to (3D) point given the toolpath and tool (to include scalloping as well)
 * Generate tool path that follows surface features
  * Property tests
-  x All points on the surface are within a half-tool width of some part of the toolpath
-   ! fix failing test
-    * Need tests for nearestPointsOnToolpath and nearestPointOnLine
-     Property tests for all these to check that order of args doesnt matter; eg distancetoline(p,a,b) === distancetoline(p,b,a) etc
-    ! Also test sphere!
-   * DONT expect bottom to be covered by toolpath
+  * All points on the surface are within a half-tool width of some part of the toolpath
+   x fix failing test
+    x Need tests for nearestPointsOnToolpath and nearestPointOnLine
+     x Property tests for all these to check that order of args doesnt matter; eg distancetoline(p,a,b) === distancetoline(p,b,a) etc
+   x DONT expect bottom to be covered by toolpath
+   x Also test sphere
+    * Toolpath generation is failing property tests because the toolpath isn't very good near the edges of the shape (sphere)
+     !! What does this test mean? Should it be 2D or 3D?
   * All points on the surface are cut to their correct height to within some tolerance
-   * Need to include scalloping
+   x Basic test
+   * Need to include the shape and size of the toolpath
+    * Width of tool when not cutting horizontally (eg the cube would actually be cut smaller because of tool radius)
+    * Scalloping
   * The toolpath points along the cutdirection at every point on the surface to within some tolerance
   * On all points the normal of the cut surface is close to the normal of the surface
   * On all points the curvature of the cut surface is close to the curvature of the surface
