--- a/index.html
+++ b/index.html
@@ -91,7 +91,14 @@ x GCode generation from toolpath
  x Save a file
  x Generate GCode from toolpath
 x Toolpath searching module (find nearest point on toolpath 2D/3D)
-* Delete height test
+x Delete height test
+! Test failed:
+! (-0.08315,0.38603,0.06377) near: (-0.06000,0.39000,0.06557),(-0.07000,0.39000,0.05477) r: 0.
+4000  failed!
+   expected 0.01374 to be less than 0.01000
+! (0.01637,-0.39720,0.04436) near: (0.04000,-0.39000,0.07937),(0.03000,-0.39000,0.08367) r: 0.
+4000  failed!
+   expected 0.01541 to be less than 0.01000
 * Rename coverage test with 2d
 * Refactor search with fluent names
 * Add ballend tool module
