Refactor search with fluent names

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ x GCode generation from toolpath
 x Toolpath searching module (find nearest point on toolpath 2D/3D)
 x Delete height test
 x Rename coverage test with 2d and make it fully 2D throughout
-* Refactor search with fluent names
+x Refactor search with fluent names
 * Add ballend tool module
 * Toolpath gen takes a tool
 * Analysis function to find nearest point on cut surface to a point
