Move tests to live near the code they are testing

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@ x Toolpath searching module (find nearest point on toolpath 2D/3D)
 x Delete height test
 x Rename coverage test with 2d and make it fully 2D throughout
 x Refactor search with fluent names
+* Refactor test files to live next to their modules
 * Add ballend tool module
 * Toolpath gen takes a tool
 * Analysis function to find nearest point on cut surface to a point
