create a tool module and be more consistent about handling tool radius etc

--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@ x Toolpath searching module (find nearest point on toolpath 2D/3D)
 x Delete height test
 x Rename coverage test with 2d and make it fully 2D throughout
 x Refactor search with fluent names
-* Refactor test files to live next to their modules
-* Add ballend tool module
-* Toolpath gen takes a tool
+x Refactor test files to live next to their modules
+* Toolpath gen takes a tool; Add ballend tool module
+* set initial camera zoom for surface size
+? Switch to mm as units??
 * Analysis function to find nearest point on cut surface to a point
 * New test that cut surface is close to surface
 * New toolpath gen...
